[gd_scene load_steps=47 format=3 uid="uid://bncp76m0m4n55"]

[ext_resource type="Texture2D" uid="uid://crprha6y0bkjg" path="res://art/EnemyBossesArt/Evil Wizard Boss one/Sprites/Idle.png" id="1_4faif"]
[ext_resource type="Script" path="res://Characters/Bosses/boss_one.gd" id="1_jljrf"]
[ext_resource type="Texture2D" uid="uid://dubmo348fg7uq" path="res://art/EnemyBossesArt/Evil Wizard Boss one/Sprites/Take hit.png" id="2_65vvc"]
[ext_resource type="Texture2D" uid="uid://o2l0p8hrhr6e" path="res://art/EnemyBossesArt/Evil Wizard Boss one/Sprites/Jump.png" id="2_drsvw"]
[ext_resource type="Texture2D" uid="uid://bhkawnv05vwmx" path="res://art/EnemyBossesArt/Evil Wizard Boss one/Sprites/Attack1.png" id="2_y74m5"]
[ext_resource type="Script" path="res://Characters/CharacterStateMachine.gd" id="3_37x5d"]
[ext_resource type="Script" path="res://Characters/Bosses/FlipStateBossOne.gd" id="4_at8pi"]
[ext_resource type="Texture2D" uid="uid://do361rk754vkw" path="res://art/EnemyBossesArt/Evil Wizard Boss one/Sprites/Death.png" id="5_b8kgl"]
[ext_resource type="Script" path="res://Characters/Bosses/DamageofAttack1BossOne.gd" id="5_hchj7"]
[ext_resource type="Script" path="res://Characters/Bosses/CollisionPolygon2DAttackBossOne.gd" id="6_xj3xd"]
[ext_resource type="Script" path="res://Characters/Bosses/Attack1StateBossOne.gd" id="7_iu024"]
[ext_resource type="Texture2D" uid="uid://dybukr7ri7weh" path="res://art/EnemyBossesArt/Evil Wizard Boss one/Sprites/Attack2.png" id="7_jl5wr"]
[ext_resource type="Script" path="res://Characters/state.gd" id="8_rjdgg"]
[ext_resource type="Script" path="res://Characters/Bosses/HitStateBossOne.gd" id="9_s33xo"]
[ext_resource type="Script" path="res://Characters/Bosses/LabelstateBossOne.gd" id="9_u8pvm"]
[ext_resource type="Script" path="res://Characters/Bosses/DamageableBossOne.gd" id="10_uymef"]
[ext_resource type="Script" path="res://Characters/Bosses/Attack2.gd" id="13_yt5vh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cyndq"]
size = Vector2(39.5, 76)

[sub_resource type="Animation" id="Animation_067kk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_w6w3j"]
resource_name = "attack1"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_y74m5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DamageofAttack1:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="Animation" id="Animation_krvvj"]
resource_name = "attack2"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_jl5wr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DamageofAttack1:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="Animation" id="Animation_6k5tj"]
resource_name = "dead"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_b8kgl")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_25cdv"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_65vvc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_cf5hr"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_4faif")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ex0i3"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_drsvw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7643d"]
_data = {
"RESET": SubResource("Animation_067kk"),
"attack1": SubResource("Animation_w6w3j"),
"attack2": SubResource("Animation_krvvj"),
"dead": SubResource("Animation_6k5tj"),
"hit": SubResource("Animation_25cdv"),
"idle": SubResource("Animation_cf5hr"),
"jump": SubResource("Animation_ex0i3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0tgxj"]
animation = &"attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tiny6"]
animation = &"attack2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m82fn"]
animation = &"dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ou3pu"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2tasy"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_evn33"]
animation = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_apsjs"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wytyv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ediya"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2ceis"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0bpgd"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bx1nt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0e18u"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h33dk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mlxg5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dpjqr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0bxef"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1a3a0"]
states/attack1/node = SubResource("AnimationNodeAnimation_0tgxj")
states/attack1/position = Vector2(558, 28)
states/attack2/node = SubResource("AnimationNodeAnimation_tiny6")
states/attack2/position = Vector2(835, 174)
states/dead/node = SubResource("AnimationNodeAnimation_m82fn")
states/dead/position = Vector2(544, 192)
states/hit/node = SubResource("AnimationNodeAnimation_ou3pu")
states/hit/position = Vector2(762, 76)
states/idle/node = SubResource("AnimationNodeAnimation_2tasy")
states/idle/position = Vector2(361, 28)
states/jump/node = SubResource("AnimationNodeAnimation_evn33")
states/jump/position = Vector2(361, 137)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_apsjs"), "idle", "attack1", SubResource("AnimationNodeStateMachineTransition_wytyv"), "idle", "dead", SubResource("AnimationNodeStateMachineTransition_ediya"), "attack1", "dead", SubResource("AnimationNodeStateMachineTransition_2ceis"), "idle", "hit", SubResource("AnimationNodeStateMachineTransition_0bpgd"), "attack1", "hit", SubResource("AnimationNodeStateMachineTransition_bx1nt"), "hit", "dead", SubResource("AnimationNodeStateMachineTransition_0e18u"), "idle", "attack2", SubResource("AnimationNodeStateMachineTransition_h33dk"), "attack2", "dead", SubResource("AnimationNodeStateMachineTransition_mlxg5"), "attack2", "hit", SubResource("AnimationNodeStateMachineTransition_dpjqr"), "attack2", "idle", SubResource("AnimationNodeStateMachineTransition_0bxef")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljttf"]
size = Vector2(124, 172)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n4ljs"]
size = Vector2(48, 633)

[node name="BossOne" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_jljrf")

[node name="TimerToFlip" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -62)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_jl5wr")
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, -37)
shape = SubResource("RectangleShape2D_cyndq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7643d")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_1a3a0")
anim_player = NodePath("../AnimationPlayer")

[node name="PlayerDetectorbehind" type="RayCast2D" parent="."]
position = Vector2(-28, -13)
rotation = 1.5708
target_position = Vector2(9.53674e-06, 201)
collision_mask = 2

[node name="DetectorToClose" type="RayCast2D" parent="."]
position = Vector2(41, -87)
rotation = -0.261799
target_position = Vector2(96.5926, 25.8819)
collision_mask = 2

[node name="DamageofAttack1" type="Area2D" parent="." node_paths=PackedStringArray("facing_shape", "boss_one")]
collision_layer = 0
collision_mask = 6
monitoring = false
script = ExtResource("5_hchj7")
facing_shape = NodePath("CollisionPolygon2D")
boss_one = NodePath("..")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DamageofAttack1"]
position = Vector2(145, -38)
polygon = PackedVector2Array(1, 0, 1, -15, 14, -35, 19, -49, 21, -66, 20, -81, 12, -103, -8, -127, -29, -133, -36, -128, -35, -111, -30, -94, -25, -68, -39, -43, -41, -25, -54, -18, -50, -9, -120, 10, -26, 12)
script = ExtResource("6_xj3xd")

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("3_37x5d")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("idle")

[node name="Flip" type="Node" parent="CharacterStateMachine"]
script = ExtResource("4_at8pi")

[node name="Attack1" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("current_state", "attack_state", "attack_two_state", "return_state")]
script = ExtResource("7_iu024")
current_state = NodePath("../idle")
attack_state = NodePath(".")
attack_two_state = NodePath("../Attack2")
return_state = NodePath("../idle")

[node name="TimerAttack1" type="Timer" parent="CharacterStateMachine/Attack1"]
wait_time = 0.85
one_shot = true

[node name="DetectionTimer" type="Timer" parent="CharacterStateMachine/Attack1"]
wait_time = 3.0
one_shot = true

[node name="Attack2" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("return_state")]
script = ExtResource("13_yt5vh")
return_state = NodePath("../idle")

[node name="Timer" type="Timer" parent="CharacterStateMachine/Attack2"]
one_shot = true

[node name="idle" type="Node" parent="CharacterStateMachine"]
script = ExtResource("8_rjdgg")
can_move = false

[node name="Hit" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable", "return_state", "idle_state", "attack_state", "attack_two_state", "dead_state")]
script = ExtResource("9_s33xo")
damageable = NodePath("../../Damageable")
return_state = NodePath("../Attack1")
idle_state = NodePath("../idle")
attack_state = NodePath("../Attack1")
attack_two_state = NodePath("../Attack2")
dead_state = NodePath("../Dead")

[node name="Timer" type="Timer" parent="CharacterStateMachine/Hit"]
wait_time = 0.25
one_shot = true

[node name="Dead" type="Node" parent="CharacterStateMachine"]
script = ExtResource("8_rjdgg")
can_move = false

[node name="PlayerDetectToAttack1" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectToAttack1"]
position = Vector2(86, -87)
shape = SubResource("RectangleShape2D_ljttf")

[node name="Label" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
offset_left = -40.0
offset_top = -151.0
offset_bottom = -128.0
text = "State:"
script = ExtResource("9_u8pvm")
state_machine = NodePath("../CharacterStateMachine")

[node name="Damageable" type="Node" parent="."]
script = ExtResource("10_uymef")

[node name="HealthbarVisibleOn" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthbarVisibleOn"]
position = Vector2(-258, -198.5)
shape = SubResource("RectangleShape2D_n4ljs")

[node name="FireMagicSpawnPoint" type="Marker2D" parent="."]
position = Vector2(86, -270)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="Attack1SFX" type="AudioStreamPlayer2D" parent="."]

[connection signal="animation_finished" from="AnimationTree" to="Damageable" method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="DamageofAttack1" to="DamageofAttack1" method="_on_body_entered"]
[connection signal="timeout" from="CharacterStateMachine/Attack1/TimerAttack1" to="CharacterStateMachine/Attack1" method="_on_timer_attack_1_timeout"]
[connection signal="timeout" from="CharacterStateMachine/Attack2/Timer" to="CharacterStateMachine/Attack2" method="_on_timer_timeout"]
[connection signal="timeout" from="CharacterStateMachine/Hit/Timer" to="CharacterStateMachine/Hit" method="_on_timer_timeout"]
[connection signal="body_entered" from="PlayerDetectToAttack1" to="CharacterStateMachine/Attack1" method="_on_player_detect_to_attack_1_body_entered"]
[connection signal="body_entered" from="HealthbarVisibleOn" to="Damageable" method="_on_healthbar_visible_on_body_entered"]
